# ofigen-cpp-magnum

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  config.json
example_output/: out_0.json  out_1.json  out_10.json  out_2.json  out_3.json  out_4.json  out_5.json  out_6.json  out_7.json  out_8.json  out_9.json  tst.1b.txt  tst.2b.txt  tst.c.txt
include/png++/: error.hpp
libpng/lib/: libpng16_staticd.lib
libpng/lib/libpng/: libpng16.cmake
src/: BackgroundDrawable.cpp  BackgroundDrawable.h  CMakeLists.txt  ColoredDrawable.cpp  ColoredDrawable.h  MagnumTypes.h  MovingObject.cpp  MovingObject.h  ObjectData.h  Ofigen.cpp  TexturedDrawable.cpp  TexturedDrawable.h
zlib/lib/: zdll.lib  zlib.lib
